--- a/app/build.gradle
+++ b/app/build.gradle
@@ -81,13 +81,27 @@ dependencies {
     implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
     implementation 'com.squareup.retrofit2:converter-scalars:2.4.0'
 
-    // paging 2
-    def paging_version = "2.1.2"
-    implementation "androidx.paging:paging-runtime:$paging_version" // For Kotlin use paging-runtime-ktx
-    // alternatively - without Android dependencies for testing
-    testImplementation "androidx.paging:paging-common:$paging_version" // For Kotlin use paging-common-ktx
-    // optional - RxJava support
-    implementation "androidx.paging:paging-rxjava2:$paging_version" // For Kotlin use paging-rxjava2-ktx
+//    // paging 2
+//    def paging_version = "2.1.2"
+//    implementation "androidx.paging:paging-runtime-ktx:$paging_version"
+//    // alternatively - without Android dependencies for testing
+//    testImplementation "androidx.paging:paging-common-ktx:$paging_version"
+//    // optional - RxJava support
+//    implementation "androidx.paging:paging-rxjava2-ktx:$paging_version"
+
+    // paging 3
+    def paging_version = "3.0.0-rc01"
+    implementation "androidx.paging:paging-runtime:$paging_version"
+    // alternatively - without Android dependencies for tests
+    testImplementation "androidx.paging:paging-common:$paging_version"
+    // optional - RxJava2 support
+    implementation "androidx.paging:paging-rxjava2:$paging_version"
+    // optional - RxJava3 support
+    implementation "androidx.paging:paging-rxjava3:$paging_version"
+    // optional - Guava ListenableFuture support
+    implementation "androidx.paging:paging-guava:$paging_version"
+    // Jetpack Compose Integration
+    implementation "androidx.paging:paging-compose:1.0.0-alpha08"
 
     // room
     def room_version = "2.2.6"
