--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,8 +38,7 @@ android {
 
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
-    // Kotlin
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    // Kotlin Extension
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.activity:activity-ktx:1.2.2'
     implementation "androidx.fragment:fragment-ktx:1.3.2"
