--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,8 @@ android {
 
     kotlinOptions {
         jvmTarget = "1.8"
+        languageVersion = "1.5"
+        apiVersion = "1.5"
     }
 
 }
